--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "lucide-react": "0.263.1",
-    "@google/genai": "0.2.1"
+    "@google/genai": "0.2.1",
+    "jspdf": "2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
